<resources>
    <string name="app_name">ADSL Monitor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_ssh">username SSH</string>
    <string name="password_ssh">password SSH</string>
    <string name="username_sh">username SH</string>
    <string name="password_sh">password SH</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>ipaddress
    <string name="ipaddress">IP address</string>
    <string name="buttontext">STOP</string>
    <string name="buttontextstart">START</string>
    <string name="channel_name">Speed notifications</string>
    <string name="channel_description">Show speed real-time</string>
    <string name="separator" />

</resources>
